# ArenaAllocator

./: .clang-format  Allocator.h  AllocatorHooks.cpp  Arena.cpp  Arena.h  ArenaAllocator.cpp  ArenaAllocator.h  ArenaAllocatorHooks.cpp  ArenaMap.cpp  ArenaMap.h  CMakeLists.txt  Chunk.h  ChunkMap.cpp  ChunkMap.h  Configuration.h  ConsoleLogger.cpp  ConsoleLogger.h  EnvironmentConfiguration.cpp  EnvironmentConfiguration.h  Logger.cpp  Logger.h  Makefile  NativeAllocator.cpp  NativeAllocator.h  NativeCXXAllocator.h  Optional.h  StaticConfiguration.cpp  StaticConfiguration.h  Timer.cpp  Timer.h  benchmark.cpp  main.cpp
docs/: Bootstrap.uml  SegregatedFreeListsFree.uml  SegregatedFreeListsMalloc.uml  Structural.uml  Structural_vertical.uml
include/ArenaAllocator/: OperationType.h  PassThroughCXXAllocator.h  SizeRangeMap.h
lib/: CMakeLists.txt
lib/NativeAllocator_Prefix/include/NativeAllocator/: malloc.h
lib/cmake/: ArenaAllocatorConfig.cmake.in
lib/gtest/: CMakeLists.txt  testConsoleLogger.cpp  testEnvironmentConfiguration.cpp  testFormat.cpp
lib/gtest/Mock/: NullAllocatorFactory.cpp  NullAllocatorFactory.h  NullLogger.cpp  NullLogger.h  NullLoggerFactory.h
lib/include/ArenaAllocator/: BuildConfiguration.h  Configuration.h  Format.h  LogLevel.h  Logger.h  OperationType.h  PassThroughCXXAllocator.h  SizeRange.h  SizeRangeMap.h  malloc.h
lib/native_allocator/: CMakeLists.txt
lib/native_allocator/__Prefix/include/NativeAllocator/: malloc.h
lib/native_allocator/__libc_Prefix/include/NativeAllocator/: malloc.h
lib/native_mmap/: CMakeLists.txt
lib/native_mmap/_Prefix/include/NativeMmap/: mman.h
lib/native_mmap/__Prefix/include/NativeMmap/: mman.h
lib/src/ArenaAllocator/: Allocation.h  AllocationMap.cpp  AllocationMap.cpp-stash  AllocationMap.h  Allocator.h  AllocatorFactory.h  AllocatorHooks.cpp  Chunk.h  ChunkMap.cpp  ChunkMap.cpp-stash  ChunkMap.h  Console.cpp  Console.h  ConsoleLogger.cpp  ConsoleLogger.cpp-stash  ConsoleLogger.h  EnvironmentConfiguration.cpp  EnvironmentConfiguration.cpp-stash  EnvironmentConfiguration.h  Format.cpp  Format.tcc  FreeList.cpp  FreeList.h  InternalAllocatorFactory.cpp  InternalAllocatorFactory.h  InternalLoggerFactory.cpp  InternalLoggerFactory.h  LoggerFactory.h  OperationType.cpp  ParseConfiguration.cpp  ParseConfiguration.cpp-stash  ParseConfiguration.h  ParsePrimitives.cpp  ParsePrimitives.h  PassThrough.cpp  PassThrough.h  PassThroughAllocator.cpp  PassThroughAllocator.h  Pool.cpp  Pool.h  (+20 more)
lib/src/Bootstrap/: ArenaAllocatorSingleton.cpp
lib/src/Hooks/: ArenaAllocator.cpp
lib/test/: CMakeLists.txt  testConsole.cpp  testSizeRangeMap.cpp
lib/test/Mock/: NullLoggerFactory.cpp
src/ArenaAllocator/: Allocation.h  AllocationMap.cpp  AllocationMap.h  Allocator.h  AllocatorFactory.h  AllocatorHooks.cpp  Chunk.h  ChunkMap.cpp  ChunkMap.h  Configuration.h  ConsoleLogger.cpp  ConsoleLogger.h  EnvironmentConfiguration.cpp  EnvironmentConfiguration.h  LogLevel.h  Logger.h  NativeAllocator.cpp  NativeAllocator.h  NativeCXXAllocator.h  Optional.h  ParseConfiguration.cpp  ParseConfiguration.h  PassThroughAllocator.cpp  PassThroughAllocator.h  PassThroughCXXAllocator.h  Pool.cpp  Pool.h  PoolAllocator.cpp  PoolAllocator.h  PoolMap.cpp  PoolMap.h  PoolStatistics.cpp  PoolStatistics.h  PoolStatisticsAllocator.cpp  PoolStatisticsAllocator.h  SizeRange.h  SizeRangeMap.cpp  SizeRangeMap.h  StaticConfiguration.cpp  StaticConfiguration.h  (+3 more)
src/CustomAllocators/: Allocator.h  AllocatorHooks.cpp  Arena.cpp  Arena.h  ArenaAllocator.cpp  ArenaAllocator.h  ArenaMap.cpp  ArenaMap.h  Chunk.h  ChunkMap.cpp  ChunkMap.h  Configuration.h  ConsoleLogger.cpp  ConsoleLogger.h  Logger.h  Makefile  NativeAllocator.cpp  NativeAllocator.h  NativeCXXAllocator.h  Optional.h  StaticConfiguration.cpp  StaticConfiguration.h  Timer.cpp  Timer.h  benchmark.cpp
utils/: CMakeLists.txt  README.md  loadMemory.sh
utils/lib/src/: Logger.h  ParseTimeTrace.cpp  ParseTimeTrace.h
utils/src/: StaticConfiguration.h  allocatorLoadTest.cpp  allocatorSmokeTest.cpp  benchmark.cpp  deterministicArrayTest.cpp  deterministicMapTest.cpp  generateGeometricPoolMap.cpp  timeTraceDistribution.cpp
